--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-session": "^1.18.1",
+    "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
